feat:  arrumando colunas e imagens nos cards

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container-fluid d-flex justify-content-center mt-5">
             <div class="container-fluid p-4">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-12">
                         <div class="d-flex">
                             <img src="img-port.png" class="rounded-circle mb-3" width="250" alt="Profile Image">
                             <div>
@@ -87,7 +87,7 @@
                         <div class="d-flex justify-content-center flex-wrap tech-icons">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
                                 width="100" alt="Python">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-original.svg"
+                            <img src="https://w7.pngwing.com/pngs/10/113/png-transparent-django-web-development-web-framework-python-software-framework-django-text-trademark-logo.png"
                                 width="100" alt="Django">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
                                 width="100" alt="HTML">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-12">
                         <div class="d-flex justify-content-end align-items-center flex-column" style="margin-top: 170px;">
                             <div class="ms-5">
                                 <h5>Languages</h5>
@@ -123,10 +123,10 @@
                             </div>
 
                             <div class="ms-5 mt-5">
-                                <a href="https://www.linkedin.com" target="_blank">
+                                <a href="https://www.linkedin.com/in/juanmarks7/" target="_blank">
                                     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="50">
                                 </a>
-                                <a href="https://github.com" target="_blank">
+                                <a href="https://github.com/JuanMarks" target="_blank">
                                     <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" width="50">
                                 </a>
                                 <a href="https://twitter.com" target="_blank">
@@ -147,7 +147,7 @@
         <div class="container-fluid mt-5" id="projetos">
             <h1 class="text-center">Meus Projetos</h1>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12 mb-3">
                     <div class="card w-full h-100">
                         <img src="atacado.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -156,11 +156,20 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div class="card w-full">
+                <div class="col-md-6 col-sm-12 ">
+                    <div class="card w-full mb-3">
                         <img src="download.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Meu SaaS de criação de sites permite que usuários escolham e personalizem o layout ideal para seu negócio, seja uma loja de roupas, um e-commerce de eletrônicos ou uma clínica odontológica. Com poucos cliques, é possível selecionar um template profissional e modificar o design sempre que necessário, garantindo total flexibilidade e autonomia.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12 ">
+                    <div class="card w-full mb-3">
+                        <img src="tickets.gif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <p class="card-text">O HelpDesk Inteligente é uma plataforma completa para a gestão de chamados, permitindo que usuários abram tickets de suporte e que analistas realizem o atendimento de forma ágil e organizada. O sistema conta com um bate-papo em tempo real, facilitando a comunicação entre o analista e o usuário, além de permitir o redirecionamento de chamados entre analistas para um suporte mais eficiente.</p>
                         </div>
                     </div>
                 </div>
