feat: colocando cards como links e adcionando curriculo

--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12">
-                        <div class="d-flex justify-content-end align-items-center flex-column" style="margin-top: 170px;">
+                        <div class="d-flex justify-content-end align-items-center flex-column" style="margin-top: 80px;">
                             <div class="ms-5">
-                                <h5>Languages</h5>
+                                <h5>Curriculo</h5>
+                                <p>Baixe meu currículo para saber mais sobre minha experiência e habilidades.</p>
+                                <a class="btn contact-btn w-50" href="curriculo.pdf" download>Baixar Currículo</a>
+                                <h5 class="mt-5">Languages</h5>
                                 <p>
                                     <img src="https://flagcdn.com/w40/us.png" width="20" class="me-2"> EN - Fluent
                                 </p>
@@ -148,30 +151,39 @@
             <h1 class="text-center">Meus Projetos</h1>
             <div class="row">
                 <div class="col-md-6 col-sm-12 mb-3">
-                    <div class="card w-full h-100">
+                    <a href="https://github.com/JuanMarks/atacadao_manager" style="text-decoration: none;"><div class="card w-full h-100">
                         <img src="atacado.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <p class="card-text">O Gerenciador de Atacado é um sistema completo para a gestão eficiente de vendas no atacado. Ele permite o cadastro de itens, a realização de vendas e a impressão de notas fiscais, proporcionando mais controle e organização para o seu negócio.</p>
+                          <p class="card-text">O Gerenciador de Atacado feito em React e TailwindCss e DjangoRestFramework é um sistema completo para a gestão eficiente de vendas no atacado. Ele permite o cadastro de itens, a realização de vendas e a impressão de notas fiscais, proporcionando mais controle e organização para o seu negócio.</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
 
                 <div class="col-md-6 col-sm-12 ">
-                    <div class="card w-full mb-3">
+                    <a href="https://github.com/JuanMarks/projeto_sas" style="text-decoration: none;"><div class="card w-full mb-3">
                         <img src="download.gif" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <p class="card-text">Meu SaaS de criação de sites permite que usuários escolham e personalizem o layout ideal para seu negócio, seja uma loja de roupas, um e-commerce de eletrônicos ou uma clínica odontológica. Com poucos cliques, é possível selecionar um template profissional e modificar o design sempre que necessário, garantindo total flexibilidade e autonomia.</p>
+                          <p class="card-text">Meu SaaS de criação de sites feito em React e DjangoRestFramework permite que usuários escolham e personalizem o layout ideal para seu negócio, seja uma loja de roupas, um e-commerce de eletrônicos ou uma clínica odontológica. Com poucos cliques, é possível selecionar um template profissional e modificar o design sempre que necessário, garantindo total flexibilidade e autonomia.</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
 
                 <div class="col-md-6 col-sm-12 ">
-                    <div class="card w-full mb-3">
-                        <img src="tickets.gif" class="card-img-top" alt="...">
+                    <a href="https://github.com/JuanMarks/trabalho_helpdesk" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
+                        <img src="tickets2.gif" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <p class="card-text">O HelpDesk Inteligente é uma plataforma completa para a gestão de chamados, permitindo que usuários abram tickets de suporte e que analistas realizem o atendimento de forma ágil e organizada. O sistema conta com um bate-papo em tempo real, facilitando a comunicação entre o analista e o usuário, além de permitir o redirecionamento de chamados entre analistas para um suporte mais eficiente.</p>
+                          <p class="card-text">O HelpDesk Inteligente feito em Django é uma plataforma completa para a gestão de chamados, permitindo que usuários abram tickets de suporte e que analistas realizem o atendimento de forma ágil e organizada. O sistema conta com um bate-papo em tempo real, facilitando a comunicação entre o analista e o usuário, além de permitir o redirecionamento de chamados entre analistas para um suporte mais eficiente.</p>
                         </div>
-                    </div>
+                    </div></a>
+                </div>
+
+                <div class="col-md-6 col-sm-12 ">
+                    <a href="https://github.com/JuansOrg/e-commerce" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
+                        <img src="e-commerce.gif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <p class="card-text">Este projeto feito em React e TailwindCss é um e-commerce de eletrônicos desenvolvido com React e Tailwind CSS, oferecendo uma experiência moderna e responsiva para os usuários. A plataforma permite que clientes naveguem por uma ampla variedade de produtos eletrônicos, adicionem itens ao carrinho e realizem compras de forma intuitiva.</p>
+                        </div>
+                    </div></a>
                 </div>
             </div>
         </div>
@@ -184,6 +196,7 @@
                 <div class="">
                     <h5>Entre em contato</h5>
                     <p>Se você está interessado em discutir um projeto, uma colaboração ou apenas quer dizer olá, fique à vontade para entrar em contato!</p>
+                    <p>Ou envie um email diretamente para mim clicando <a href="mailto:juandev77@gmail.com" class=" text-white">aqui</a>.</p>
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
