--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 </a>
                             </div>
 
-                            <button class="btn contact-btn ms-5 mt-4 w-50">CONTACT ME</button>
+                            <a href="https://mail.google.com/mail/?view=cm&to=juandev77@gmail.com" target="_blank"<button class="btn contact-btn ms-5 mt-4 w-50">CONTACT ME</button></a>
                         </div>
                     </div>
 
@@ -159,8 +159,8 @@
                     </div></a>
                 </div>
 
-                <div class="col-md-6 col-sm-12 ">
-                    <a href="https://github.com/JuanMarks/projeto_sas" style="text-decoration: none;"><div class="card w-full mb-3">
+                <div class="col-md-6 col-sm-12 mb-3">
+                    <a href="https://github.com/JuanMarks/projeto_sas" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
                         <img src="download.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Meu SaaS de criação de sites feito em React e DjangoRestFramework permite que usuários escolham e personalizem o layout ideal para seu negócio, seja uma loja de roupas, um e-commerce de eletrônicos ou uma clínica odontológica. Com poucos cliques, é possível selecionar um template profissional e modificar o design sempre que necessário, garantindo total flexibilidade e autonomia.</p>
@@ -168,7 +168,7 @@
                     </div></a>
                 </div>
 
-                <div class="col-md-6 col-sm-12 ">
+                <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuanMarks/trabalho_helpdesk" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
                         <img src="tickets2.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -177,7 +177,7 @@
                     </div></a>
                 </div>
 
-                <div class="col-md-6 col-sm-12 ">
+                <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuansOrg/e-commerce" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
                         <img src="e-commerce.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -196,8 +196,8 @@
                 <div class="">
                     <h5>Entre em contato</h5>
                     <p>Se você está interessado em discutir um projeto, uma colaboração ou apenas quer dizer olá, fique à vontade para entrar em contato!</p>
-                    <p>Ou envie um email diretamente para mim clicando <a href="mailto:juandev77@gmail.com" class=" text-white">aqui</a>.</p>
-                    <form>
+                    <p>Ou envie um email diretamente para mim clicando <a href="https://mail.google.com/mail/?view=cm&to=juandev77@gmail.com" target="_blank" class="text-white">aqui</a>.</p>
+                    <form id="contactForm" class="mb-5">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nome</label>
                             <input type="text" class="form-control" id="name" required>
@@ -220,6 +220,38 @@
             </div>
         </div>
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+    
+    <script>
+        (function(){
+           emailjs.init({
+             publicKey: "cMum92dvOOxh6AF4x",
+           });
+        })();
+        document.getElementById('contactForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+
+            emailjs.send("service_6l5vidj", "template_f416oam", {
+                name: name,
+                email: email,
+                message: message,
+            }).then(
+                function (response) {
+                    alert('Email enviado com sucesso!');
+                },
+                function (error) {
+                    alert('Erro ao enviar o email. Tente novamente.');
+                    console.error(error);
+                }
+            );
+        });
+    </script>
+
 </body>
 
 </html>
