--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand fs-4" href="#">Portfólio</a>
+                <a class="navbar-brand fs-4 fw-bold" href="#">JuanDev</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
