--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <a class="btn contact-btn w-50" href="curriculo.pdf" download>Baixar Currículo</a>
                                 <h5 class="mt-5">Languages</h5>
                                 <p>
-                                    <img src="https://flagcdn.com/w40/us.png" width="20" class="me-2"> EN - Fluent
+                                    <img src="https://flagcdn.com/w40/us.png" width="20" class="me-2"> EN - Advanced
                                 </p>
                                 <p>
                                     <img src="https://flagcdn.com/w40/br.png" width="20" class="me-2"> PT-BR - Native
