chore: arrumando paginas

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
                         <div class="d-flex">
-                            <img src="img-port.png" class="rounded-circle mb-3" width="250" alt="Profile Image">
+                            <img src="./assets/img-port.png" class="rounded-circle mb-3" width="250" alt="Profile Image">
                             <div>
                                 <h2 class="ms-3 " style="margin-top: 100px;">Ola, Eu sou Juan 👋</h2>
                                 <p class="text-white opacity-50 ms-3">Software Engineer</p>
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuanMarks/atacadao_manager" style="text-decoration: none;"><div class="card w-full h-100">
-                        <img src="atacado.png" class="card-img-top" alt="...">
+                        <img src="./assets/atacado.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">O Gerenciador de Atacado feito em React e TailwindCss e DjangoRestFramework é um sistema completo para a gestão eficiente de vendas no atacado. Ele permite o cadastro de itens, a realização de vendas e a impressão de notas fiscais, proporcionando mais controle e organização para o seu negócio.</p>
                         </div>
@@ -161,7 +161,7 @@
 
                 <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuanMarks/projeto_sas" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
-                        <img src="download.gif" class="card-img-top" alt="...">
+                        <img src="./assets/download.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Meu SaaS de criação de sites feito em React e DjangoRestFramework permite que usuários escolham e personalizem o layout ideal para seu negócio, seja uma loja de roupas, um e-commerce de eletrônicos ou uma clínica odontológica. Com poucos cliques, é possível selecionar um template profissional e modificar o design sempre que necessário, garantindo total flexibilidade e autonomia.</p>
                         </div>
@@ -170,7 +170,7 @@
 
                 <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuanMarks/trabalho_helpdesk" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
-                        <img src="tickets2.gif" class="card-img-top" alt="...">
+                        <img src="./assets/tickets2.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">O HelpDesk Inteligente feito em Django é uma plataforma completa para a gestão de chamados, permitindo que usuários abram tickets de suporte e que analistas realizem o atendimento de forma ágil e organizada. O sistema conta com um bate-papo em tempo real, facilitando a comunicação entre o analista e o usuário, além de permitir o redirecionamento de chamados entre analistas para um suporte mais eficiente.</p>
                         </div>
@@ -179,7 +179,7 @@
 
                 <div class="col-md-6 col-sm-12 mb-3">
                     <a href="https://github.com/JuansOrg/e-commerce" style="text-decoration: none;"><div class="card w-full mb-3 h-100">
-                        <img src="e-commerce.gif" class="card-img-top" alt="...">
+                        <img src="./assets/e-commerce.gif" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Este projeto feito em React e TailwindCss é um e-commerce de eletrônicos desenvolvido com React e Tailwind CSS, oferecendo uma experiência moderna e responsiva para os usuários. A plataforma permite que clientes naveguem por uma ampla variedade de produtos eletrônicos, adicionem itens ao carrinho e realizem compras de forma intuitiva.</p>
                         </div>
